--- a/W07D2/W07D2_ML_Deployment.ipynb
+++ b/W07D2/W07D2_ML_Deployment.ipynb
@@ -131,6 +131,291 @@
     }
    },
    "source": [
+    "# Super Easy Example of Web Scraping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "URL = \"https://en.wikipedia.org/wiki/List_of_current_heads_of_state_and_government\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Afghanistan|President|Ashraf Ghani\n",
+      "Albania|President|Ilir Meta\n",
+      "Algeria|President|Abdelmadjid Tebboune\n",
+      "Andorra|Episcopal Co-Prince|Joan Enric Vives i Sicília\n",
+      "Angola|President|João Lourenço\n",
+      "Antigua and Barbuda|Queen|Elizabeth II\n",
+      "Argentina|President|Alberto Fernández\n",
+      "Armenia|President|Armen Sarksyan\n",
+      "Australia|Queen|Elizabeth II\n",
+      "Austria|President|Alexander Van der Bellen\n",
+      "Azerbaijan|President|Ilham Aliyev\n",
+      "Bahamas, The|Queen|Elizabeth II\n",
+      "Bahrain|King|Hamad bin Isa Al Khalifa\n",
+      "Bangladesh|President|Abdul Hamid\n",
+      "Barbados|Queen|Elizabeth II\n",
+      "Belarus|President|Alexander Lukashenko\n",
+      "Belgium|King|Philippe\n",
+      "Belize|Queen|Elizabeth II\n",
+      "Benin|President|Patrice Talon\n",
+      "Bhutan|King|Jigme Khesar Namgyel Wangchuck\n",
+      "Bolivia|President|Luis Arce\n",
+      "Bosnia and Herzegovina|High Representative|Valentin Inzko\n",
+      "Christian Schmidt|High Representative|Valentin Inzko\n",
+      "Presidency|Chairman of the Council of Ministers|Zoran Tegeltija\n",
+      "Milorad Dodik|Chairman of the Council of Ministers|Zoran Tegeltija\n",
+      "Šefik Džaferović|Chairman of the Council of Ministers|Zoran Tegeltija\n",
+      "Botswana|President|Mokgweetsi Masisi\n",
+      "Brazil|President|Jair Bolsonaro\n",
+      "Brunei|Sultan|Prime Minister\n",
+      "Bulgaria|President|Rumen Radev\n",
+      "Burkina Faso|President|Roch Marc Christian Kaboré\n",
+      "Burundi|President|Évariste Ndayishimiye\n",
+      "Cambodia|King|Norodom Sihamoni\n",
+      "Cameroon|President|Paul Biya\n",
+      "Canada|Queen|Elizabeth II\n",
+      "Cape Verde|President|Jorge Carlos Fonseca\n",
+      "Central African Republic|President|Faustin-Archange Touadéra\n",
+      "Chad|Chairman of the Transitional Military Council|Mahamat Déby\n",
+      "Interim President|Acting Prime Minister|Albert Pahimi Padacké\n",
+      "Chile|President|Sebastián Piñera\n",
+      "China|General Secretary of the Communist Party|Xi Jinping\n",
+      "President|Premier of the State Council|Li Keqiang\n",
+      "Colombia|President|Iván Duque\n",
+      "Comoros|President|Azali Assoumani\n",
+      "Congo, Democratic Republic of the|President|Félix Tshisekedi\n",
+      "Congo, Republic of the|President|Denis Sassou Nguesso\n",
+      "Costa Rica|President|Carlos Alvarado Quesada\n",
+      "Croatia|President|Zoran Milanović\n",
+      "Cuba|First Secretary of the Communist Party|Miguel Díaz-Canel\n",
+      "President|Prime Minister|Manuel Marrero Cruz\n",
+      "Cyprus|President|Nicos Anastasiades\n",
+      "Czechia|President|Miloš Zeman\n",
+      "Denmark|Queen|Margrethe II\n",
+      "Djibouti|President|Ismaïl Omar Guelleh\n",
+      "Dominica|President|Charles Savarin\n",
+      "Dominican Republic|President|Luis Abinader\n",
+      "East Timor|President|Francisco Guterres\n",
+      "Ecuador|President|Guillermo Lasso\n",
+      "Egypt|President|Abdel Fattah el-Sisi\n",
+      "El Salvador|President|Nayib Bukele\n",
+      "Equatorial Guinea|President|Teodoro Obiang Nguema Mbasogo\n",
+      "Eritrea|Chairman of the People's Front for Democracy and Justice|Isaias Afwerki\n",
+      "President|Chairman of the People's Front for Democracy and Justice|Isaias Afwerki\n",
+      "Estonia|President|Kersti Kaljulaid\n",
+      "Eswatini|King|Mswati III\n",
+      "Ethiopia|President|Sahle-Work Zewde\n",
+      "Fiji|President|Jioji Konrote\n",
+      "Finland|President|Sauli Niinistö\n",
+      "France|President|Emmanuel Macron\n",
+      "Gabon|President|Ali Bongo Ondimba\n",
+      "Gambia, The|President|Adama Barrow\n",
+      "Georgia|President|Salome Zourabichvili\n",
+      "Germany|President|Frank-Walter Steinmeier\n",
+      "Ghana|President|Nana Akufo-Addo\n",
+      "Greece|President|Katerina Sakellaropoulou\n",
+      "Grenada|Queen|Elizabeth II\n",
+      "Guatemala|President|Alejandro Giammattei\n",
+      "Guinea|President|Alpha Condé\n",
+      "Guinea-Bissau|President|Umaro Sissoco Embaló\n",
+      "Guyana|President|Irfaan Ali\n",
+      "Haiti|President|Jovenel Moïse\n",
+      "Honduras|President|Juan Orlando Hernández\n",
+      "Hungary|President|János Áder\n",
+      "Iceland|President|Guðni Th. Jóhannesson\n",
+      "India|President|Ram Nath Kovind\n",
+      "Indonesia|President|Joko Widodo\n",
+      "Iran|Supreme Leader|Ali Khamenei\n",
+      "Ebrahim Raisi|Supreme Leader|Ali Khamenei\n",
+      "Iraq|President|Barham Salih\n",
+      "Ireland|President|Michael D. Higgins\n",
+      "Israel|President|Reuven Rivlin\n",
+      "Italy|President|Sergio Mattarella\n",
+      "Ivory Coast|President|Alassane Ouattara\n",
+      "Jamaica|Queen|Elizabeth II\n",
+      "Japan|Emperor|Naruhito\n",
+      "Jordan|King|Abdullah II\n",
+      "Kazakhstan|Security Council|Nursultan Nazarbayev\n",
+      "President|Prime Minister|Asqar Mamin\n",
+      "Kenya|President|Uhuru Kenyatta\n",
+      "Kiribati|President|Taneti Maamau\n",
+      "Kuwait|Emir|Nawaf Al-Ahmad Al-Jaber Al-Sabah\n",
+      "Kyrgyzstan|President|Sadyr Japarov\n",
+      "Laos|General Secretary of the People's Revolutionary Party|Thongloun Sisoulith\n",
+      "President|Prime Minister|Phankham Viphavanh\n",
+      "Latvia|President|Egils Levits\n",
+      "Lebanon|President|Michel Aoun\n",
+      "Saad Hariri|President|Michel Aoun\n",
+      "Lesotho|King|Letsie III\n",
+      "Liberia|President|George Weah\n",
+      "Libya|President|George Weah\n",
+      "Presidential Council|Prime Minister|Abdul Hamid Dbeibeh\n",
+      "Mohamed al-Menfi|Prime Minister|Abdul Hamid Dbeibeh\n",
+      "Abdullah al-Lafi|Prime Minister|Abdul Hamid Dbeibeh\n",
+      "Liechtenstein|Prince Regnant|Hans-Adam II\n",
+      "Regent|Prince Regnant|Hans-Adam II\n",
+      "Lithuania|President|Gitanas Nausėda\n",
+      "Luxembourg|Grand Duke|Henri\n",
+      "Madagascar|President|Andry Rajoelina\n",
+      "Malawi|President|Lazarus Chakwera\n",
+      "Malaysia|Yang di-Pertuan Agong|Abdullah Sultan Ahmad Shah\n",
+      "Maldives|President|Ibrahim Mohamed Solih\n",
+      "Mali|Interim President|Assimi Goïta\n",
+      "Malta|President|George Vella\n",
+      "Marshall Islands|President|David Kabua\n",
+      "Mauritania|President|Mohamed Ould Ghazouani\n",
+      "Mauritius|President|Prithvirajsing Roopun\n",
+      "Mexico|President|Andrés Manuel López Obrador\n",
+      "Federated States of Micronesia|President|David W. Panuelo\n",
+      "Moldova|President|Maia Sandu\n",
+      "Monaco|Sovereign Prince|Albert II\n",
+      "Mongolia|President|Ukhnaagiin Khürelsükh\n",
+      "Montenegro|President|Milo Đukanović\n",
+      "Morocco|King|Mohammed VI\n",
+      "Mozambique|President|Filipe Nyusi\n",
+      "Myanmar|Chairman of the State Administration Council|Min Aung Hlaing\n",
+      "Namibia|President|Hage Geingob\n",
+      "Nauru|President|Lionel Aingimea\n",
+      "Nepal|President|Bidhya Devi Bhandari\n",
+      "Netherlands|King|Willem-Alexander\n",
+      "New Zealand|Queen|Elizabeth II\n",
+      "Nicaragua|President|Daniel Ortega\n",
+      "Niger|President|Mohamed Bazoum\n",
+      "Nigeria|President|Muhammadu Buhari\n",
+      "North Korea|General Secretary of the Workers' Party of Korea|Kim Jong-un\n",
+      "Supreme Leader|Premier of the Cabinet|Kim Tok-hun\n",
+      "North Macedonia|President|Stevo Pendarovski\n",
+      "Norway|King|Harald V\n",
+      "Oman|Sultan|Prime Minister\n",
+      "Pakistan|President|Arif Alvi\n",
+      "Palau|President|Surangel Whipps Jr.\n",
+      "Palestine|President|Mahmoud Abbas\n",
+      "Panama|President|Laurentino Cortizo\n",
+      "Papua New Guinea|Queen|Elizabeth II\n",
+      "Paraguay|President|Mario Abdo Benítez\n",
+      "Peru|Interim President|Francisco Sagasti\n",
+      "Pedro Castillo|Interim President|Francisco Sagasti\n",
+      "Philippines|President|Rodrigo Duterte\n",
+      "Poland|President|Andrzej Duda\n",
+      "Portugal|President|Marcelo Rebelo de Sousa\n",
+      "Qatar|Emir|Tamim bin Hamad Al Thani\n",
+      "Romania|President|Klaus Iohannis\n",
+      "Russia|President|Vladimir Putin\n",
+      "Rwanda|President|Paul Kagame\n",
+      "Saint Kitts and Nevis|Queen|Elizabeth II\n",
+      "Saint Lucia|Queen|Elizabeth II\n",
+      "Saint Vincent and the Grenadines|Queen|Elizabeth II\n",
+      "Samoa|O le Ao o le Malo|Tuimalealiifano Va'aletoa Sualauvi II\n",
+      "San Marino|Captain Regent|Gian Carlo Venturini\n",
+      "Captain Regent|Captain Regent|Gian Carlo Venturini\n",
+      "São Tomé and Príncipe|President|Evaristo Carvalho\n",
+      "Saudi Arabia|King|Salman\n",
+      "Senegal|President|Macky Sall\n",
+      "Serbia|President|Aleksandar Vučić\n",
+      "Seychelles|President|Wavel Ramkalawan\n",
+      "Sierra Leone|President|Julius Maada Bio\n",
+      "Singapore|President|Halimah Yacob\n",
+      "Slovakia|President|Zuzana Čaputová\n",
+      "Slovenia|President|Borut Pahor\n",
+      "Solomon Islands|Queen|Elizabeth II\n",
+      "Somalia|President|Mohamed Abdullahi Mohamed\n",
+      "South Africa|President|Cyril Ramaphosa\n",
+      "South Korea|President|Moon Jae-in\n",
+      "South Sudan|President|Salva Kiir Mayardit\n",
+      "Spain|King|Felipe VI\n",
+      "Sri Lanka|President|Gotabaya Rajapaksa\n",
+      "Sudan|Leader of the Sovereignty Council|Abdel Fattah al-Burhan\n",
+      "Suriname|President|Chan Santokhi\n",
+      "Sweden|King|Carl XVI Gustaf\n",
+      "Switzerland|King|Carl XVI Gustaf\n",
+      "Federal Council|King|Carl XVI Gustaf\n",
+      "Guy Parmelin|King|Carl XVI Gustaf\n",
+      "Ignazio Cassis|King|Carl XVI Gustaf\n",
+      "Syria|President|Bashar al-Assad\n",
+      "Tajikistan|President|Emomali Rahmon\n",
+      "Tanzania|President|Samia Suluhu Hassan\n",
+      "Thailand|King|Vajiralongkorn\n",
+      "Togo|President|Faure Gnassingbé\n",
+      "Tonga|King|Tupou VI\n",
+      "Trinidad and Tobago|President|Paula-Mae Weekes\n",
+      "Tunisia|President|Kaïs Saïed\n",
+      "Turkey|President|Recep Tayyip Erdoğan\n",
+      "Turkmenistan|President|Gurbanguly Berdimuhamedow\n",
+      "Tuvalu|Queen|Elizabeth II\n",
+      "Uganda|President|Yoweri Museveni\n",
+      "Ukraine|President|Volodymyr Zelensky\n",
+      "United Arab Emirates|President|Khalifa bin Zayed Al Nahyan\n",
+      "United Kingdom|Queen|Elizabeth II\n",
+      "United States|President|Joe Biden\n",
+      "Uruguay|President|Luis Lacalle Pou\n",
+      "Uzbekistan|President|Shavkat Mirziyoyev\n",
+      "Vanuatu|President|Tallis Obed Moses\n",
+      "Vatican City|Sovereign|Pope Francis\n",
+      "Venezuela|President|Nicolás Maduro\n",
+      "Vietnam|General Secretary of the Communist Party|Nguyễn Phú Trọng\n",
+      "President|Prime Minister|Phạm Minh Chính\n",
+      "Yemen|President|Abdrabbuh Mansur Hadi\n",
+      "Zambia|President|Edgar Lungu\n",
+      "Zimbabwe|President|Emmerson Mnangagwa\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = requests.get(URL).text\n",
+    "soup = BeautifulSoup(res,'lxml')\n",
+    "for items in soup.find('table', class_='wikitable').find_all('tr')[1::1]:\n",
+    "    data = items.find_all(['th','td'])\n",
+    "    try:\n",
+    "        country = data[0].a.text\n",
+    "        title = data[1].a.text\n",
+    "        name = data[1].a.find_next_sibling().text\n",
+    "    except IndexError:pass\n",
+    "    print(\"{}|{}|{}\".format(country,title,name))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## What is an API?"
    ]
   },
@@ -297,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -330,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -347,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -357,16 +642,79 @@
     {
      "data": {
       "text/plain": [
-       "'099'"
+       "[{'RouteNo': '099',\n",
+       "  'RouteName': 'COMMERCIAL-BROADWAY/UBC (B-LINE)',\n",
+       "  'Direction': 'EAST',\n",
+       "  'RouteMap': {'Href': 'https://nb.translink.ca/geodata/099.kmz'},\n",
+       "  'Schedules': [{'Pattern': 'E1',\n",
+       "    'Destination': \"COMM'L-BDWAY STN\",\n",
+       "    'ExpectedLeaveTime': '9:57am',\n",
+       "    'ExpectedCountdown': 0,\n",
+       "    'ScheduleStatus': '*',\n",
+       "    'CancelledTrip': False,\n",
+       "    'CancelledStop': False,\n",
+       "    'AddedTrip': False,\n",
+       "    'AddedStop': False,\n",
+       "    'LastUpdate': '08:57:02 am'},\n",
+       "   {'Pattern': 'E1',\n",
+       "    'Destination': \"COMM'L-BDWAY STN\",\n",
+       "    'ExpectedLeaveTime': '10:00am',\n",
+       "    'ExpectedCountdown': 3,\n",
+       "    'ScheduleStatus': '*',\n",
+       "    'CancelledTrip': False,\n",
+       "    'CancelledStop': False,\n",
+       "    'AddedTrip': False,\n",
+       "    'AddedStop': False,\n",
+       "    'LastUpdate': '09:00:05 am'},\n",
+       "   {'Pattern': 'E1',\n",
+       "    'Destination': \"COMM'L-BDWAY STN\",\n",
+       "    'ExpectedLeaveTime': '10:04am',\n",
+       "    'ExpectedCountdown': 7,\n",
+       "    'ScheduleStatus': '*',\n",
+       "    'CancelledTrip': False,\n",
+       "    'CancelledStop': False,\n",
+       "    'AddedTrip': False,\n",
+       "    'AddedStop': False,\n",
+       "    'LastUpdate': '09:04:05 am'},\n",
+       "   {'Pattern': 'E1',\n",
+       "    'Destination': \"COMM'L-BDWAY STN\",\n",
+       "    'ExpectedLeaveTime': '10:08am',\n",
+       "    'ExpectedCountdown': 11,\n",
+       "    'ScheduleStatus': '*',\n",
+       "    'CancelledTrip': False,\n",
+       "    'CancelledStop': False,\n",
+       "    'AddedTrip': False,\n",
+       "    'AddedStop': False,\n",
+       "    'LastUpdate': '09:08:02 am'},\n",
+       "   {'Pattern': 'E8FL2',\n",
+       "    'Destination': 'TO BOUNDARY B-LINE',\n",
+       "    'ExpectedLeaveTime': '10:11am',\n",
+       "    'ExpectedCountdown': 14,\n",
+       "    'ScheduleStatus': '*',\n",
+       "    'CancelledTrip': False,\n",
+       "    'CancelledStop': False,\n",
+       "    'AddedTrip': False,\n",
+       "    'AddedStop': False,\n",
+       "    'LastUpdate': '09:11:12 am'},\n",
+       "   {'Pattern': 'E1',\n",
+       "    'Destination': \"COMM'L-BDWAY STN\",\n",
+       "    'ExpectedLeaveTime': '10:14am',\n",
+       "    'ExpectedCountdown': 17,\n",
+       "    'ScheduleStatus': '*',\n",
+       "    'CancelledTrip': False,\n",
+       "    'CancelledStop': False,\n",
+       "    'AddedTrip': False,\n",
+       "    'AddedStop': False,\n",
+       "    'LastUpdate': '09:14:24 am'}]}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y[0]['RouteNo']"
+    "y"
    ]
   },
   {
